third_party/move/move-compiler-v2/tests/checking/dotdot/field_update_not_supported.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/dotdot/field_update_not_supported.move:8:16
  │
8 │         Foo { x: 42, ..y }
  │                      ^^
  │                      │
  │                      Unexpected '..'
  │                      Expected an identifier
