third_party/move/move-compiler-v2/tests/checking/dotdot/field_update_not_supported.move
module 0x42::test {
	struct Foo has drop {
		x: u8,
		y: bool
	}

	fun test0(y: Foo): Foo {
		Foo { x: 42, ..y }
	}
}
